Run minimal test matrix on PRs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,13 @@ concurrency:
 
 jobs:
   test:
-    if: github.event_name != 'pull_request'
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     strategy:
       fail-fast: true
       matrix:
         os: [macos-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ${{ fromJson(github.event_name == 'pull_request' && '["3.12"]' || '["3.10","3.11","3.12"]') }}
 
     steps:
     - uses: actions/checkout@v6
